# vibephysics

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  REPORT.md  USAGE.md  bpy_batch_texture_mesh.py  convert_to_gif.py  debug_cache.py  feedforward_run.inc.sh  filter_black_gs.py  filter_white_gs.py  filter_white_pixels.py  image_to_square.py  label_feedforward_comparison.py  mcp_addon.py  mcp_addon_simple.py  mcp_addon_vibephysics.py  plot_cost_analysis.py  pyproject.toml  run.sh  run_3dgs_viewer.sh  run_all.sh  run_annotation.sh  run_basics.sh  run_compare_blend.sh  run_export_blend.sh  run_feedforward.sh  run_forest.sh  run_glomap.sh  run_glomap_visual.sh  run_lingbot_map.sh  run_map_anything.sh  run_postprocess_blend.sh  run_r3.sh  run_reconstruct.sh  run_robot.sh  run_vgg_ttt.sh  run_vggt_omega.sh  (+5 more)
annotation/: __init__.py  base.py  bbox.py  manager.py  motion_trail.py  point_tracking.py  viewport.py
assets/: tree_asset_grid.blend
examples/: __init__.py  demo_all_annotations.py  demo_bbox.py  demo_motion_trail.py  demo_point_tracking.py  duck_waypoint_walk.py  robot_walking_water_puddle.py  storm.py  water_bucket.py  water_float.py  water_puddles.py  water_rise.py
examples/basics/: demo_all_annotations.py  demo_bbox.py  demo_frustum_culling.py  demo_motion_trail.py  demo_point_tracking.py
examples/colmap_format/: demo_glomap.py  demo_glomap_visual.py
examples/feedforward/: demo_reconstruct.py  view_point_cloud.ipynb
examples/go2/: go2_walk.py  go2_waypoint_walk.py
examples/gsplat/: __init__.py  demo_3dgs_viewer.py
examples/robot/: duck_waypoint_walk.py  robot_forest_walk.py  robot_walking_water_puddle.py  robot_waypoint_walk.py
examples/water/: storm.py  water_bucket.py  water_float.py  water_puddles.py  water_rise.py
foundation/: README.md  __init__.py  ground.py  lighting.py  materials.py  objects.py  physics.py  point_tracking.py  robot.py  trajectory.py  viewport.py  visuals.py  water.py
scripts/: debug_walk.py  inspect_ik.py  publish_pypi.sh  robot_walking_water_puddle.py  storm.py  water_bucket.py  water_float.py  water_puddles.py  water_rise.py
src/: materials.py  physics.py  visuals.py
src/vibephysics/: __init__.py
src/vibephysics/annotation/: __init__.py  bbox.py  manager.py  point_tracking.py
src/vibephysics/feedforward/: SKILL.md  __init__.py  algo_3d_bbox.py  common.py  config.py  deps.py  export.py  frame_postprocess.py  ground_align.py  reconstruct.py  schema.py  visual.py
src/vibephysics/feedforward/configs/: feedforward.yaml  feedforward_det_dense_discrete.yaml  feedforward_lingbot_map.yaml  feedforward_map_anything.yaml  feedforward_r3.yaml  feedforward_vgg_ttt.yaml  feedforward_vggt_omega.yaml
src/vibephysics/feedforward/detection_seg/: __init__.py
src/vibephysics/feedforward/dvlt/: __init__.py
src/vibephysics/feedforward/lingbot_map/: __init__.py
src/vibephysics/feedforward/map_anything/: __init__.py
src/vibephysics/feedforward/r3/: __init__.py
src/vibephysics/feedforward/vgg_ttt/: __init__.py
src/vibephysics/feedforward/vggt_omega/: __init__.py
src/vibephysics/foundation/: __init__.py  go2.py  lighting.py  open_duck.py  robot.py  scene.py
src/vibephysics/mapping/: __init__.py  colmap.py  config.py  glomap.py  map_visual.py  pipeline.py  utils.py
src/vibephysics/mapping/configs/: sfm.yaml
src/vibephysics/setup/: __init__.py  gsplat.py  importer.py  merge_blend.py  postprocess_blend.py  scene.py  viewport.py
test/: README.md  debug_dual_local.py
tests/: 4dgs_example.py  4dgs_input.py  4dgs_urgs.py  cup.py  debug_walk.py  isolate_4dgs_info.py  nunchunks.py
utils/: __init__.py  viewport.py
