[build-system]
requires = ["setuptools>=61.0,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibephysics"
version = "0.4.2"
description = "Physics simulation and annotation tools for Blender"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
    {name = "tsunyi", email = "tsunyi@mimiaigen.com"}
]
keywords = [
    "blender",
    "physics",
    "simulation",
    "annotation",
    "rigid-body",
    "water",
    "robotics",
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Visualization",
]

# Core dependencies
dependencies = [
    "tqdm>=4.0",
    "numpy<2.0",
    "bpy>=5.0,<5.1",
    "pycolmap>=4.0,<5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
lingbot_map = [
    "torch; platform_system != 'Linux'",
    "torchvision; platform_system != 'Linux'",
    "opencv-python",
    "pillow",
    "tqdm",
    "einops",
    "scipy",
    "safetensors",
    "huggingface_hub",
]
vggt_omega = [
    "torch; platform_system != 'Linux'",
    "opencv-python",
    "huggingface_hub",
]
vgg_ttt = [
    "torch; platform_system != 'Linux'",
    "torchvision; platform_system != 'Linux'",
    "opencv-python",
    "huggingface_hub",
    "einops",
    "roma",
    "trimesh",
    "hydra-core",
]
map_anything = [
    "torch; platform_system != 'Linux'",
    "torchvision; platform_system != 'Linux'",
    "opencv-python",
    "pillow",
    "huggingface_hub",
    "hydra-core",
    "omegaconf",
]
detection_seg = [
    "torch; platform_system != 'Linux'",
    "torchvision; platform_system != 'Linux'",
    "pillow",
    "huggingface_hub",
    "transformers>=4.52.0",
]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.scripts]
vibephysics-mcp = "vibephysics.mcp_server:main"

[project.urls]
Homepage = "https://github.com/yourusername/vibephysics"
Documentation = "https://github.com/yourusername/vibephysics#readme"
Repository = "https://github.com/yourusername/vibephysics.git"
Issues = "https://github.com/yourusername/vibephysics/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.md"]
"vibephysics.feedforward" = ["configs/*.yaml"]
"vibephysics.mapping" = ["configs/*.yaml"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]
